fixed equipe images not showing up

--- a/wp-content/themes/themanew/dev/src/scss/modules/_equipe.scss
+++ b/wp-content/themes/themanew/dev/src/scss/modules/_equipe.scss
@@ -6,7 +6,6 @@
 		margin: 0 auto 30px;
 		img {
 			margin: auto;
-			height: 100%;
 			width: inherit;
 		}
 	}
