--- a/wp-content/themes/themanew/static/css/style.css
+++ b/wp-content/themes/themanew/static/css/style.css
@@ -485,7 +485,6 @@ body {
 
 .equipe__wrap img {
   margin: auto;
-  height: 100%;
   width: inherit;
 }
 
